# MROGH-feature-descriptor

./: CMakeLists.txt  README.md
include/: mrogh.h
src/: main.cpp  mrogh.cpp
